--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
     "vue": "^3.2.25",
+    "vue-grid-layout": "^3.0.0-beta1",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
